# advent-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  qodana.yaml
aoc-2022/: Cargo.toml  README.md
aoc-2023/: Cargo.toml  README.md
aoc-2023/inputs/: 00  00_test
aoc-2023/src/: lib.rs
aoc-2024/: Cargo.toml
aoc-2024/src/: lib.rs
aoc-2025/: Cargo.toml
