[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aoc-2022-00"

[[bin]]
name = "aoc-2022-01"

[[bin]]
name = "aoc-2022-02"

[[bin]]
name = "aoc-2022-03"

[[bin]]
name = "aoc-2022-04"

[[bin]]
name = "aoc-2022-05"

[[bin]]
name = "aoc-2022-06"

[[bin]]
name = "aoc-2022-07"

[[bin]]
name = "aoc-2022-08"

[[bin]]
name = "aoc-2022-09"

[[bin]]
name = "aoc-2022-10"

[[bin]]
name = "aoc-2022-11"

[[bin]]
name = "aoc-2022-12"

[[bin]]
name = "aoc-2022-13"

[[bin]]
name = "aoc-2022-14"

[[bin]]
name = "aoc-2022-15"

[[bin]]
name = "aoc-2022-16"

[[bin]]
name = "aoc-2022-17"

[[bin]]
name = "aoc-2022-18"

[[bin]]
name = "aoc-2022-19"

[[bin]]
name = "aoc-2022-20"

[[bin]]
name = "aoc-2022-21"

[[bin]]
name = "aoc-2022-22"

[[bin]]
name = "aoc-2022-23"

[[bin]]
name = "aoc-2022-24"

[[bin]]
name = "aoc-2022-25"


[dependencies]
anyhow = "1.0.65"
